0031293: Visualization, TKOpenGl - broken capping when PBR shading is ON

Division by 'w' component has been added in texture coordinates calculations in PBR functions.